[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "qdrant-vector-aggregator"
version = "1.0.1"
description = "Aggregate embeddings in Qdrant collections with smart content concatenation"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Moudather Chelbi", email = "moudather.chelbi@gmail.com"}
]
keywords = ["qdrant", "vector", "embeddings", "aggregation", "semantic-search", "nlp", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
]

dependencies = [
    "qdrant-client>=1.7.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "python-dotenv>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
]

[project.urls]
Homepage = "https://github.com/vinerya/qdrant_vector_aggregator"
Documentation = "https://github.com/vinerya/qdrant_vector_aggregator#readme"
Repository = "https://github.com/vinerya/qdrant_vector_aggregator"
"Bug Tracker" = "https://github.com/vinerya/qdrant_vector_aggregator/issues"

[tool.setuptools]
packages = ["qdrant_vector_aggregator"]

[tool.setuptools.package-data]
qdrant_vector_aggregator = ["py.typed"]
